# tauri-plugin-thermal-printer

./: CONTRIBUTING.md  Cargo.toml  DRIVER_USAGE.md  LICENSE  README.md  build.rs  package.json
android/: build.gradle.kts  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: BluetoothPrinter.kt  Example.kt  ExamplePlugin.kt  NetworkPrinter.kt  PrinterDiscovery.kt  Thermal_Printer_Plugin.kt  UsbPrinter.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: code-page.contract.ts  encode.ts  index.ts
ios/: Package.swift  README.md
ios/Sources/: BLEDiscovery.swift  BLEPrinter.swift  NetworkDiscovery.swift  NetworkPrinter.swift  ThermalPrinterPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: list_thermal_printers.toml  print_thermal_printer.toml  test_thermal_printer.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
src/commands_esc_pos/: mod.rs
src/commands_esc_pos/Image/: image.rs  image_processor.rs  logo.rs  mod.rs
src/commands_esc_pos/codes/: mod.rs
src/commands_esc_pos/codes/aztec/: aztec.rs  mod.rs
src/commands_esc_pos/codes/barcode/: barcode.rs  barcode_text_position.rs  barcode_type.rs  mod.rs
src/commands_esc_pos/codes/composite/: composite.rs  mod.rs
src/commands_esc_pos/codes/data_matrix/: data_matrix.rs  data_matrix_size.rs  mod.rs
src/commands_esc_pos/codes/gs1_databar_2d/: gs1_databar_2d.rs  gs1_databar_2d_type.rs  mod.rs
src/commands_esc_pos/codes/maxicode/: maxicode.rs  mod.rs
src/commands_esc_pos/codes/pdf417/: mod.rs  pdf417.rs  pdf417_error_correction.rs
src/commands_esc_pos/codes/qr/: mod.rs  qr.rs  qr_error_correction.rs  qr_model.rs  (+1 more)
src/commands_esc_pos/control/: mod.rs  printer_control.rs
src/commands_esc_pos/image_escpos/: image_alignment.rs  image_code.rs  image_mode.rs  image_processor.rs  logo.rs  mod.rs
src/commands_esc_pos/text/: code_page.rs  mod.rs  table.rs  table_render.rs  text_type.rs
src/desktop_printers/: mod.rs  unix_base.rs  windows.rs
src/drivers/: file.rs  mod.rs  network.rs  serial.rs  usb.rs
src/models/: connection_config.rs  mod.rs  paper_size.rs  ping.rs  print_job_request.rs  print_sections.rs  printer_options.rs
src/process/: mod.rs  process_print.rs  process_print_test.rs
src/test/: mod.rs  test.rs
(+4 files in other folders)
