[package]
name = "tauri-plugin-thermal-printer"
version = "0.1.0"
authors = [ "luis3132" ]
description = "Plugin for Tauri to send esc/pos commands to thermal_printer"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-thermal-printer"

[features]
default = []

[dependencies]
tauri = { version = "2.9.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
image = "0.24"
base64 = "0.21"

[target.'cfg(target_os = "linux")'.dependencies]
printers = "2.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
printers = "2.2.1"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
