[package]
name = "tauri-plugin-thermal-printer"
version = "1.3.0"
authors = [ "luis3132" ]
description = "Plugin for Tauri to send esc/pos commands to thermal_printer"
edition = "2021"
license = "MIT" 
repository = "https://github.com/luis3132/tauri-plugin-thermal-printer"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-thermal-printer"

[features]
default = []

[dependencies]
tauri = { version = "2.9.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
image = "0.24"
base64 = "0.21"
kamadak-exif = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
printers = "2.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
printers = "2.2.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winspool", "wingdi", "winbase", "handleapi"] }

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
